<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_2"
            android:title="@string/menu_home1"/>

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_2"
            android:title="@string/menu_profile1"/>

        <item android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/menu_contact"/>

        <item android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share"/>

        <item android:id="@+id/nav_privacy_policies"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/privacy_policys"/>


    </group>
</menu>