<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.neonai.axocomplaints.ui.logout.LogOutFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.neonai.axocomplaints.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.neonai.axocomplaints.ui.gallery.GalleryFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.neonai.axocomplaints.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_privacy_policies"
        android:name="com.neonai.axocomplaints.ui.PrivacyPolicy"
        android:label="@string/privacy_policys"
        tools:layout="@layout/fragment_privacy_policy" />



</navigation>